...
      <View style={styles.footer}>
        <TwoActionBar
          secondaryAction={{
            title: 'Change source',
            onPress: openSourceSetup,
            variant: 'secondary',
            testID: 'schedule-overview-change-source',
          }}
          primaryAction={{
            title: 'Edit schedule',
            onPress: updateCurrentSchedule,
            testID: 'schedule-overview-edit-schedule',
          }}
        />
      </View>
    </Container>
  );
};
...
